Fix navbar-dropdown alignment issue

--- a/assets/styles/_overrides.scss
+++ b/assets/styles/_overrides.scss
@@ -400,6 +400,21 @@ body {
   align-items: center;
 }
 
+._navbar-link-category {
+  padding-left: 0;
+}
+
+._navbar-link-avatar {
+  padding-right: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  ._navbar-dropdown.is-right {
+    left: auto;
+    right: 0.75rem;
+  }
+}
+
 ._navbar-dropdown__item {
   display: flex;
   align-items: center;
